add NetworkImageView and LearnGoogleMaps Activity example :octocat: - note : if you want to use this example please use your own google API key

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     </string>
     <string name="title_activity_searchable_menu">SearchableMenuActivity</string>
     <string name="title_activity_search_result">SearchResultActivity</string>
+    <string name="title_activity_learn_google_maps">Map</string>
 </resources>
